# tutor

./: .dockerignore  .env.example  .gitignore  AVAILABLE_MODELS.md  Makefile  architecture.md  docker-compose.yml  knowledge.md  package-lock.json  package.json  pyproject.toml  quiz_engine.md  roadmap.md
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions-frontend.md.instructions.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_update_embedding_dim.py  0003_quiz_attempt_columns.py  0004_document_topics.py  0005_quiz_attempt_is_skipped.py
apps/api/src/api/: deps.py  main.py  rag.py
apps/api/src/api/quiz/: graph.py  nodes.py  state.py
apps/api/src/api/routers/: auth.py  chat.py  documents.py  progress.py  quiz.py  upload.py
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/chat/: page.tsx
apps/web/src/app/(dashboard)/progress/: page.tsx
apps/web/src/app/(dashboard)/quiz/: page.tsx
apps/web/src/app/(dashboard)/upload/: page.tsx
apps/web/src/app/quiz/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/components/: NavBar.tsx  providers.tsx
apps/web/src/components/layout/: AppSidebar.tsx  AuthGuard.tsx
apps/web/src/lib/: api.ts  queryClient.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker/: __init__.py  __main__.py  celery_app.py  tasks.py
infra/: .gitignore  README.md  app.py  cdk.json
infra/stacks/: app_stack.py  data_stack.py  vpc_stack.py
