[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
