[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "celery[redis]>=5.4",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "openai>=1.30",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
