[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "celery[redis]>=5.4",
    "boto3>=1.34",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openai>=1.30",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
